View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029524 | Open CASCADE | OCCT:Modeling Algorithms | public | 2018-02-22 18:40 | 2018-06-29 21:19 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 7.2.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029524: Modeling Algorithms - access violation in HLRBRep_PolyAlgo while computing HLR for triangulation-only surface | ||||
Description | Triangulation-only surface is a valid surface definition according to OCCT description, however HLRBRep_PolyAlgo crashes on attempt to process such surface due to missing NULL checks. | ||||
Steps To Reproduce | pload ALL readstl m [locate_data_file model_stl_045.stl] triangulation vclear vinit View1 vdisplay -dispMode 1 m vfit vhlr on -showHidden 0 -algoType polyAlgo | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_7 bug29524 | ||||
|
Branch CR29524 has been created by kgv. SHA-1: 0b35e9d0371f3f247d47c53e183af5647a11dccf No new revisions were added by this update. |
|
The patch adds protection against NULL dereference has been pushed (though algorithm still produces an empty result in this case). |
|
Branch CR29524 has been updated by kgv. SHA-1: e5b6d9ec698126bc3b8cb30b9aac487ece74ba94 Detailed log of new commits: Author: kgv Date: Thu Feb 22 18:42:15 2018 +0300 0029524: Modeling Algorithms - access violation in HLRBRep_PolyAlgo while computing HLR for triangulation-only surface |
|
Wrong indentation. Please use tab size = 8 in your editor. |
|
Branch CR29524 has been updated forcibly by kgv. SHA-1: f0959fb627a2a4d040d7a08180bc286763eae676 |
|
Indentation has been corrected for consistency with other parts of the file. > Wrong indentation. Please use tab size = 8 in your editor. This makes no sense, because file contains tabulation symbols which are forbidden by OCCT coding rules. |
|
Jenkins job started http://jenkins-test-10.nnov.opencascade.com:8080/view/CR29524-master-msv/view/COMPARE/. |
|
Reviewed. |
|
Combination - OCCT branch : CR29524 SHA - f0959fb627a2a4d040d7a08180bc286763eae676 Products branch : master SHA - d452be1d47046de2f00debc4c4fe2166f6a9904d was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian70-64: OCCT Total CPU difference: 18376.009999999584 / 18347.729999999596 [+0.15%] Products Total CPU difference: 7463.4499999999925 / 7477.510000000006 [-0.19%] Windows-64-VC10: OCCT Total CPU difference: 17699.109055098514 / 17722.010001898587 [-0.13%] Products Total CPU difference: 8030.291875899984 / 8043.3491595999785 [-0.16%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29524 has been deleted by kgv. SHA-1: f0959fb627a2a4d040d7a08180bc286763eae676 |
occt: master ff6d1454 2018-02-22 15:42:15 Committer: bugmaster Details Diff |
0029524: Modeling Algorithms - access violation in HLRBRep_PolyAlgo while computing HLR for triangulation-only surface |
Affected Issues 0029524 |
|
mod - src/HLRBRep/HLRBRep_PolyAlgo.cxx | Diff File | ||
add - tests/bugs/modalg_7/bug29524 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-02-22 18:40 | kgv | New Issue | |
2018-02-22 18:40 | kgv | Assigned To | => msv |
2018-02-22 18:47 | git | Note Added: 0074123 | |
2018-02-22 18:48 | kgv | Note Added: 0074124 | |
2018-02-22 18:48 | kgv | Status | new => resolved |
2018-02-22 18:49 | git | Note Added: 0074125 | |
2018-02-22 20:46 | kgv | Note Edited: 0074124 | |
2018-02-26 10:19 | msv | Note Added: 0074132 | |
2018-02-26 10:19 | msv | Assigned To | msv => kgv |
2018-02-26 10:19 | msv | Status | resolved => assigned |
2018-02-26 13:55 | git | Note Added: 0074137 | |
2018-02-26 13:56 | kgv | Note Added: 0074138 | |
2018-02-26 13:56 | kgv | Assigned To | kgv => msv |
2018-02-26 13:56 | kgv | Status | assigned => resolved |
2018-02-26 15:53 | msv | Note Added: 0074141 | |
2018-02-26 18:47 | msv | Note Added: 0074144 | |
2018-02-26 18:47 | msv | Assigned To | msv => bugmaster |
2018-02-26 18:47 | msv | Status | resolved => reviewed |
2018-02-26 18:51 | bugmaster | Test case number | => bugs modalg_7 bug29524 |
2018-02-26 18:54 | bugmaster | Note Added: 0074145 | |
2018-02-26 18:54 | bugmaster | Status | reviewed => tested |
2018-03-04 15:34 | bugmaster | Changeset attached | => occt master ff6d1454 |
2018-03-04 15:34 | bugmaster | Status | tested => verified |
2018-03-04 15:34 | bugmaster | Resolution | open => fixed |
2018-03-06 15:50 | git | Note Added: 0074298 | |
2018-04-24 11:52 | kgv | Relationship added | related to 0027991 |
2018-04-24 11:53 | kgv | Relationship added | related to 0028125 |
2018-06-29 21:13 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |